--- a/index.html
+++ b/index.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<style>
-html, body, canvas{
-	margin: 0;
-	padding: 0;
-	background: black;
-	display:block;
-	color:rgb(169, 152, 119);
-	font-family: Verdana, sans-serif;
-	font-size: 13px;
-}
-canvas{
-	-webkit-user-select: none;
-    -moz-user-select: none;
-    -khtml-user-select: none
-}
-a{
-	color: #d96500;
-}
-.page{
-	margin: 0 auto;
-	width: 1300px;
-}
-</style>
+	<style>
+		html,
+		body,
+		canvas {
+			margin: 0;
+			padding: 0;
+			background: black;
+			display: block;
+			color: rgb(169, 152, 119);
+			font-family: Verdana, sans-serif;
+			font-size: 13px;
+		}
+
+		canvas {
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-khtml-user-select: none
+		}
+
+		a {
+			color: #d96500;
+		}
+
+		.page {
+			margin: 0 auto;
+			width: 1300px;
+		}
+	</style>
 </head>
+
 <body>
 	<div class="page">
 		<canvas id="floor" width="1300" height="650"></canvas>
 	</div>
-<script>/*window.onerror=alert*/</script>
-<script src="diablo.js"></script>
+
+	<script src="classes/shape.js"></script>
+	<script src="classes/mob.js"></script>
+	<script src="classes/agressiveMob.js"></script>
+	<script src="classes/heroBarbarian.js"></script>
+	<script src="classes/baseWall.js"></script>
+	<script src="classes/wall.js"></script>
+	<script src="classes/wallObject.js"></script>
+	<script src="classes/deathMob.js"></script>
+	<script src="classes/barrel.js"></script>
+	<script src="classes/coin.js"></script>
+	<script src="classes/potion.js"></script>
+	<script src="classes/potionHealth.js"></script>
+	<script src="diablo.js"></script>
 </body>
+
 </html>
