separação de algumas funções para arquivos auxiliares

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 		<canvas id="floor" width="1300" height="650"></canvas>
 	</div>
 
+	<script src="classes/util.js"></script>
+	<script src="classes/game.js"></script>
 	<script src="classes/shape.js"></script>
 	<script src="classes/mob.js"></script>
 	<script src="classes/agressiveMob.js"></script>
