--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 	<script src="classes/coin.js"></script>
 	<script src="classes/potion.js"></script>
 	<script src="classes/potionHealth.js"></script>
+	<script src="classes/loaders/mapLoader.js"></script>
 	<script src="diablo.js"></script>
 </body>
 
